Use safe svg logo

--- a/safe_notification_service/templates/drf-yasg/swagger-ui.html
+++ b/safe_notification_service/templates/drf-yasg/swagger-ui.html
@@ -12,6 +12,6 @@
         .swagger-ui .topbar {background-color: black;}
         .swagger-ui .topbar .download-url-wrapper .download-url-button {background-color: #27b3fa;}
         .swagger-ui .topbar .download-url-wrapper input[type=text] {border: 2px solid #27b3fa;}
-        .topbar-wrapper img {content:url("{% static 'safe/favicon.png' %}");}
+        .topbar-wrapper img {content:url("{% static 'safe/logo.svg' %}");}
     </style>
 {% endblock %}
