Fix typo on swagger template

--- a/safe_notification_service/templates/drf-yasg/swagger-ui.html
+++ b/safe_notification_service/templates/drf-yasg/swagger-ui.html
@@ -1,5 +1,5 @@
 {% extends "drf-yasg/swagger-ui.html" %}
-{% load staticfiles %}
+{% load static %}
 
 {% block favicon %}
     <link rel="icon" type="image/png" href="{% static 'safe/favicon.png' %}"/>
